--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,49 @@
+body {
+  background-color: rgb(206, 183, 141);
+  font-family: "Courier New", Courier, monospace;
+  border: 10px solid rgba(70, 70, 70, 0.884);
+}
+
+.center {
+  margin: auto;
+  width: 60%;
+  padding: 10px;
+}
+
+h1 {
+  font-size: 40px;
+  text-align: center;
+  margin-bottom: 100px;
+}
+
+p {
+  font-size: 20px;
+  margin-top: 100px;
+}
+.button {
+  background-color: rgb(70, 70, 70);
+  color: white;
+  padding: 15px 32px;
+  font-size: 25px;
+  margin: 40px 100px;
+  text-align: center;
+}
+
 .card {
   display: inline-block;
   text-align: center;
-  width: 3em;
+  width: 2.5em;
   font-size: 2em;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  margin: 1em;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  margin: 10px 10px;
   user-select: none;
- }
+  background-color: rgba(102, 102, 102, 0.897);
+  color: white;
+  box-align: center;
+}
 
- .activeCard {
-   color: red;
-   background: pink;
- }
+.activeCard {
+  color: red;
+  background: pink;
+  border-bottom: 6px solid rgb(161, 91, 91);
+}
