--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,12 @@ p {
   font-size: 20px;
   margin-top: 70px;
 }
+
+h2 {
+  text-align: center;
+  background-color: rgba(70, 70, 70, 0.884);
+  font-size: 20px;
+}
 .button {
   background-color: rgb(70, 70, 70);
   color: white;
