--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,14 @@ h1 {
   font-size: 40px;
   text-align: center;
   margin-bottom: -10px;
+  text-align: center;
+  background-color: rgba(70, 70, 70, 0.884);
+  margin-top: 40px;
+  margin-bottom: -0.5px;
+  margin-left: -0.5px;
+  color: rgb(255, 255, 255);
+  font-family: Arial;
+  padding: 28px;
 }
 
 p {
@@ -41,6 +49,11 @@ h2 {
   margin: 40px 150px;
   text-align: center;
   margin-top: 100px;
+}
+
+.newWin {
+  font-size: 20px;
+  margin-top: 10px;
 }
 
 .card {
